# heic-to-jpg-converter

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
src/converter/: converter.py  utils.py
